small dark mode fix

--- a/src/css/games/apiary/darkStyle.less
+++ b/src/css/games/apiary/darkStyle.less
@@ -15,5 +15,5 @@
 
 #jj-zoom-controls {
 	background: var(--dark-10);
-	color: var(--light-80);
+	color: var(--light-70);
 }
